--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -99,7 +99,7 @@ In the original assessment, overall the Type II microsurfacing was found to redu
 
 This analysis focuses on the observational passby data, where vehicle type varies, and assessess the effects of speed and pavement temperature in addition to experimental treatments.
 
-
+In the table below, SD_pavetemp is not applicable when the value is 0, because the same pavement temperature measurement was used throughout the trial.
 
 ```{r summary_vals}
 Feq_summary <- LZFeq_l %>%
@@ -191,16 +191,19 @@ CS_1.4_col = ifelse(abs(LZFeq.aov.results$treatmentX1.4in.Chip.Seal)>LZFeq.aov.s
 
 #Plot LZFeq 1/4in Chip Seal
 LZFeq_Chip.Seal.1.4 = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results, aes(x = frequency, 
-                                                y = treatmentX1.4in.Chip.Seal,
-                                                ymin = treatmentX1.4in.Chip.Seal - LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal,
-                                                 ymax =treatmentX1.4in.Chip.Seal + LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal),
-                  colour = CS_1.4_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFeq.aov.results,
+                  aes(x = frequency,
+                      y = treatmentX1.4in.Chip.Seal,
+                      ymin = treatmentX1.4in.Chip.Seal - LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal,
+                      ymax =treatmentX1.4in.Chip.Seal + LZFeq.aov.stderr$treatmentX1.4in.Chip.Seal),
+                  colour = CS_1.4_col,
+                  size =1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA 1/4in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -211,16 +214,19 @@ CS_3.8_col = ifelse(abs(LZFeq.aov.results$treatmentX3.8in.Chip.Seal)>LZFeq.aov.s
 
 #Plot LZFeq 3/8 in chip seal
 LZFeq_Chip.Seal.3.8 = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results, aes(x = frequency, 
-                                                y = treatmentX3.8in.Chip.Seal,
-                                                ymin = treatmentX3.8in.Chip.Seal - LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal,
-                                                 ymax =treatmentX3.8in.Chip.Seal + LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal),
-                  colour = CS_3.8_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFeq.aov.results, 
+                  aes(x = frequency,
+                      y = treatmentX3.8in.Chip.Seal,
+                      ymin = treatmentX3.8in.Chip.Seal - LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal,
+                      ymax =treatmentX3.8in.Chip.Seal + LZFeq.aov.stderr$treatmentX3.8in.Chip.Seal),
+                  colour = CS_3.8_col,
+                  size = 1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA 3/8in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -231,16 +237,19 @@ TII_Micro_col = ifelse(abs(LZFeq.aov.results$treatmentType.II.Microsurfacing)>LZ
 
 #Plot LZFeq type II microsurfacing
 LZFeq_Microsurfacing.II = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results, aes(x = frequency, 
-                                                y = treatmentType.II.Microsurfacing,
-                                                ymin=treatmentType.II.Microsurfacing - LZFeq.aov.stderr$treatmentType.II.Microsurfacing,
-                                                 ymax=treatmentType.II.Microsurfacing + LZFeq.aov.stderr$treatmentType.II.Microsurfacing),
-                  colour = TII_Micro_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFeq.aov.results,
+                  aes(x = frequency, 
+                  y = treatmentType.II.Microsurfacing,
+                  ymin=treatmentType.II.Microsurfacing - LZFeq.aov.stderr$treatmentType.II.Microsurfacing,
+                  ymax=treatmentType.II.Microsurfacing + LZFeq.aov.stderr$treatmentType.II.Microsurfacing),
+                  colour = TII_Micro_col,
+                  size = 1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA Type II Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -251,16 +260,19 @@ TIII_Micro_col = ifelse(abs(LZFeq.aov.results$treatmentType.III.Microsurfacing)>
 
 #Plot LZFeq Type III microsurfacing
 LZFeq_Microsurfacing.III = ggplot()+
-  geom_pointrange(data = LZFeq.aov.results, aes(x = frequency, 
-                                                y = treatmentType.III.Microsurfacing,
-                                                ymin=treatmentType.III.Microsurfacing - LZFeq.aov.stderr$treatmentType.III.Microsurfacing,
-                                                 ymax=treatmentType.III.Microsurfacing + LZFeq.aov.stderr$treatmentType.III.Microsurfacing),
-                  colour = TIII_Micro_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFeq.aov.results,
+                  aes(x = frequency, 
+                  y = treatmentType.III.Microsurfacing,
+                  ymin=treatmentType.III.Microsurfacing - LZFeq.aov.stderr$treatmentType.III.Microsurfacing,
+                  ymax=treatmentType.III.Microsurfacing + LZFeq.aov.stderr$treatmentType.III.Microsurfacing),
+                  colour = TIII_Micro_col,
+                  size = 1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
-  labs(title = "LZFeq ANOVA Type II Microsurfacing Coefficients", 
+  labs(title = "LZFeq ANOVA Type III Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -293,15 +305,17 @@ LZFeq.aov.macro.stderr = cbind(LZFeq.aov.macro.stderr, frequency = frequencies)
 ```
 ##Plotting ANOVA coefficients of sound intensity for LZFeq
 Predictors: Macro Treatment type, pavement temperature, speed, and year
-```{r fig.width = 15}
+```{r fig.height = 10, fig.width = 15}
 #Plot Macro Treatment Type Results LZFeq
 LZFeq_Chip.Seal = ggplot()+
-  geom_pointrange(data = LZFeq.aov.macro.results, aes(x=frequency, y = macro_treatmentChip.Seal,
-                                                 ymin =macro_treatmentChip.Seal - 
-                                                   LZFeq.aov.macro.stderr$macro_treatmentChip.Seal,
-                                                 ymax =macro_treatmentChip.Seal +
-                                                   LZFeq.aov.macro.stderr$macro_treatmentChip.Seal))+
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFeq.aov.macro.results,
+                  aes(x=frequency,
+                      y = macro_treatmentChip.Seal,
+                      ymin =macro_treatmentChip.Seal - LZFeq.aov.macro.stderr$macro_treatmentChip.Seal,
+                      ymax =macro_treatmentChip.Seal + LZFeq.aov.macro.stderr$macro_treatmentChip.Seal),
+                  size = 1)+
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA Chip Seal Coefficients",
        x = "Frequency (Hz)",
@@ -309,12 +323,14 @@ LZFeq_Chip.Seal = ggplot()+
   ylim(-27,75)
 
 LZFeq_Microsurfacing = ggplot()+
-  geom_pointrange(data = LZFeq.aov.macro.results, aes(x=frequency, y = macro_treatmentMicrosurfacing,
-                                                 ymin =macro_treatmentMicrosurfacing - 
-                                                   LZFeq.aov.macro.stderr$macro_treatmentMicrosurfacing,
-                                                 ymax =macro_treatmentMicrosurfacing +
-                                                   LZFeq.aov.macro.stderr$macro_treatmentMicrosurfacing))+
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFeq.aov.macro.results,
+                  aes(x=frequency, 
+                      y = macro_treatmentMicrosurfacing,
+                      ymin =macro_treatmentMicrosurfacing - LZFeq.aov.macro.stderr$macro_treatmentMicrosurfacing,
+                      ymax =macro_treatmentMicrosurfacing + LZFeq.aov.macro.stderr$macro_treatmentMicrosurfacing),
+                  size = 1)+
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFeq ANOVA Microsurfacing Coefficients",
        x = "Frequency (Hz)",
@@ -372,16 +388,19 @@ CS_1.4_col = ifelse(abs(LZFMax.aov.results$treatmentX1.4in.Chip.Seal)>
        ifelse(LZFMax.aov.results$treatmentX1.4in.Chip.Seal<0, "blue", "red"),"gray")
 
 LZFMax_Chip.Seal.1.4 = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, aes(x = frequency, 
-                                                y = treatmentX1.4in.Chip.Seal,
-                                                ymin = treatmentX1.4in.Chip.Seal - LZFMax.aov.stderr$treatmentX1.4in.Chip.Seal,
-                                                 ymax =treatmentX1.4in.Chip.Seal + LZFMax.aov.stderr$treatmentX1.4in.Chip.Seal),
-                  colour = CS_1.4_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFMax.aov.results, 
+                  aes(x = frequency, 
+                      y = treatmentX1.4in.Chip.Seal,
+                      ymin = treatmentX1.4in.Chip.Seal - LZFMax.aov.stderr$treatmentX1.4in.Chip.Seal,
+                      ymax =treatmentX1.4in.Chip.Seal + LZFMax.aov.stderr$treatmentX1.4in.Chip.Seal),
+                  colour = CS_1.4_col,
+                  size = 1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA 1/4in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -391,16 +410,19 @@ CS_3.8_col = ifelse(abs(LZFMax.aov.results$treatmentX3.8in.Chip.Seal)>
        ifelse(LZFMax.aov.results$treatmentX3.8in.Chip.Seal<0, "blue", "red"),"gray")
 
 LZFMax_Chip.Seal.3.8 = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, aes(x = frequency, 
-                                                y = treatmentX3.8in.Chip.Seal,
-                                                ymin = treatmentX3.8in.Chip.Seal - LZFMax.aov.stderr$treatmentX3.8in.Chip.Seal,
-                                                 ymax =treatmentX3.8in.Chip.Seal + LZFMax.aov.stderr$treatmentX3.8in.Chip.Seal),
-                  colour = CS_3.8_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFMax.aov.results, 
+                  aes(x = frequency, 
+                      y = treatmentX3.8in.Chip.Seal,
+                      ymin = treatmentX3.8in.Chip.Seal - LZFMax.aov.stderr$treatmentX3.8in.Chip.Seal,
+                      ymax =treatmentX3.8in.Chip.Seal + LZFMax.aov.stderr$treatmentX3.8in.Chip.Seal),
+                  colour = CS_3.8_col,
+                  size = 1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA 3/8in Chip Seal Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -410,18 +432,19 @@ TII_Micro_col = ifelse(abs(LZFMax.aov.results$treatmentType.II.Microsurfacing)>
        ifelse(LZFMax.aov.results$treatmentType.II.Microsurfacing<0, "blue", "red"),"gray")
 
 LZFMax_Microsurfacing.II = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, aes(x = frequency, 
-                                                y = treatmentType.II.Microsurfacing,
-                                                ymin=treatmentType.II.Microsurfacing -
-                                                  LZFMax.aov.stderr$treatmentType.II.Microsurfacing,
-                                                 ymax=treatmentType.II.Microsurfacing +
-                                                  LZFMax.aov.stderr$treatmentType.II.Microsurfacing),
-                  colour = TII_Micro_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFMax.aov.results, 
+                  aes(x = frequency, 
+                      y = treatmentType.II.Microsurfacing,
+                      ymin=treatmentType.II.Microsurfacing - LZFMax.aov.stderr$treatmentType.II.Microsurfacing,
+                      ymax=treatmentType.II.Microsurfacing + LZFMax.aov.stderr$treatmentType.II.Microsurfacing),
+                  colour = TII_Micro_col,
+                  size = 1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA Type II Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -431,18 +454,19 @@ TIII_Micro_col = ifelse(abs(LZFMax.aov.results$treatmentType.III.Microsurfacing)
        ifelse(LZFMax.aov.results$treatmentType.III.Microsurfacing<0, "blue", "red"),"gray")
 
 LZFMax_Microsurfacing.III = ggplot()+
-  geom_pointrange(data = LZFMax.aov.results, aes(x = frequency, 
-                                                y = treatmentType.III.Microsurfacing,
-                                                ymin=treatmentType.III.Microsurfacing -
-                                                  LZFMax.aov.stderr$treatmentType.III.Microsurfacing,
-                                                 ymax=treatmentType.III.Microsurfacing +
-                                                  LZFMax.aov.stderr$treatmentType.III.Microsurfacing),
-                  colour = TIII_Micro_col) +
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFMax.aov.results, 
+                  aes(x = frequency, 
+                      y = treatmentType.III.Microsurfacing,
+                      ymin=treatmentType.III.Microsurfacing - LZFMax.aov.stderr$treatmentType.III.Microsurfacing,
+                      ymax=treatmentType.III.Microsurfacing + LZFMax.aov.stderr$treatmentType.III.Microsurfacing),
+                  colour = TIII_Micro_col,
+                  size = 1) +
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
-  labs(title = "LZFMax ANOVA Type II Microsurfacing Coefficients", 
+  labs(title = "LZFMax ANOVA Type III Microsurfacing Coefficients", 
        x = "Frequency (Hz)", 
-       y = "Coefficent of Change in Sound Intensity from Pre-Treatment (dB)")  + 
+       y = "Coefficent of Change in Sound \n Intensity from Pre-Treatment (dB)")  + 
   geom_hline(yintercept = 0)+
   ylim(-12,12)
 
@@ -451,7 +475,7 @@ grid.arrange(LZFMax_Chip.Seal.1.4,LZFMax_Chip.Seal.3.8,LZFMax_Microsurfacing.II,
 
 ```
 
-```{r}
+```{r fig.height = 20, fig.width = 15}
 #ANOVA Model on Macro Treatment Types LZFMax
 LZFMax_l = filter(LZFMax_l, Year != "2019")
 
@@ -475,15 +499,17 @@ LZFMax.aov.macro.stderr = cbind(LZFMax.aov.macro.stderr, frequency = frequencies
 ```
 ##Plotting ANOVA coefficients of sound intensity for LZFMax
 Predictors: Macro Treatment type, pavement temperature, speed, and year
-```{r fig.width = 15}
+```{r fig.height = 10, fig.width = 15}
 #Plot Macro Treatment Type Results LZFMax
 LZFMax_Chip.Seal = ggplot()+
-  geom_pointrange(data = LZFMax.aov.macro.results, aes(x=frequency, y = macro_treatmentChip.Seal,
-                                                 ymin =macro_treatmentChip.Seal - 
-                                                   LZFMax.aov.macro.stderr$macro_treatmentChip.Seal,
-                                                 ymax =macro_treatmentChip.Seal +
-                                                   LZFMax.aov.macro.stderr$macro_treatmentChip.Seal))+
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFMax.aov.macro.results, 
+                  aes(x=frequency, 
+                      y = macro_treatmentChip.Seal,
+                      ymin =macro_treatmentChip.Seal - LZFMax.aov.macro.stderr$macro_treatmentChip.Seal,
+                      ymax =macro_treatmentChip.Seal + LZFMax.aov.macro.stderr$macro_treatmentChip.Seal),
+                  size = 1)+
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA Chip Seal Coefficients",
        x = "Frequency (Hz)",
@@ -491,12 +517,14 @@ LZFMax_Chip.Seal = ggplot()+
   ylim(-25,75)
 
 LZFMax_Microsurfacing = ggplot()+
-  geom_pointrange(data = LZFMax.aov.macro.results, aes(x=frequency, y = macro_treatmentMicrosurfacing,
-                                                 ymin =macro_treatmentMicrosurfacing - 
-                                                   LZFMax.aov.macro.stderr$macro_treatmentMicrosurfacing,
-                                                 ymax =macro_treatmentMicrosurfacing +
-                                                   LZFMax.aov.macro.stderr$macro_treatmentMicrosurfacing))+
-  theme_bw(base_line_size = 1)+
+  geom_pointrange(data = LZFMax.aov.macro.results, 
+                  aes(x=frequency, 
+                      y = macro_treatmentMicrosurfacing,
+                      ymin =macro_treatmentMicrosurfacing - LZFMax.aov.macro.stderr$macro_treatmentMicrosurfacing,
+                      ymax =macro_treatmentMicrosurfacing + LZFMax.aov.macro.stderr$macro_treatmentMicrosurfacing),
+                  size = 1)+
+  theme_bw(base_line_size = 1,
+           base_size = 20)+
   scale_x_log10()+
   labs(title = "LZFMax ANOVA Microsurfacing Coefficients",
        x = "Frequency (Hz)",
